update dependecies and downgrade java vesion